--- a/package.json
+++ b/package.json
@@ -1,14 +1,23 @@
 {
   "name": "my-app",
   "version": "0.1.0",
+  "homepage": "https://ims.a2hosted.com/staging/thilak/thilak/",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "aos": "^2.3.4",
+    "bootstrap": "^5.3.0",
+    "bootstrap-icons": "^1.10.5",
+    "express": "^4.18.2",
+    "framer-motion": "^10.15.1",
+    "nodemailer": "^6.9.4",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "swiper": "^10.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
