changed the custom domain in json file

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-app",
   "version": "0.1.0",
-  "homepage": "https://ims.a2hosted.com/staging/thilak/thilak/",
+  "homepage": "https://thilak.tech",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
@@ -12,6 +12,7 @@
     "bootstrap-icons": "^1.10.5",
     "express": "^4.18.2",
     "framer-motion": "^10.15.1",
+    "gh-pages": "^6.0.0",
     "nodemailer": "^6.9.4",
     "react": "^18.2.0",
     "react-bootstrap": "^2.8.0",
@@ -21,6 +22,8 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
